--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -40,46 +40,46 @@ jobs:
         echo "${{ secrets.PRIVKEY1 }}" > privkey1.pem
         ls -la
       
-    #- name: run terraform initialization
-    #   working-directory: terraform
-    #  run: terraform init
+    - name: run terraform initialization
+       working-directory: terraform
+      run: terraform init
       
-    #- name: run terraform initialization
-    #  working-directory: terraform
-    #  run: terraform apply -auto-approve
+    - name: run terraform initialization
+      working-directory: terraform
+      run: terraform apply -auto-approve
       
-    #- name: run add db endpoint env var
-    #  working-directory: terraform
-    #  run: |
-    #    DB_ENDPOINT=$(aws rds describe-db-instances --query 'DBInstances[?DBInstanceIdentifier==`postgrestestdb`].[Endpoint.Address]' --output text)
-    #    DB_ENDPOINT="Server="$DB_ENDPOINT
-    #    DB_ENDPOINT=$DB_ENDPOINT";Port=5432;Database=PostgresTestDb;User Id=postgres;Password=12453265"
-    #    echo $DB_ENDPOINT
+    - name: run add db endpoint env var
+      working-directory: terraform
+      run: |
+        DB_ENDPOINT=$(aws rds describe-db-instances --query 'DBInstances[?DBInstanceIdentifier==`postgrestestdb`].[Endpoint.Address]' --output text)
+        DB_ENDPOINT="Server="$DB_ENDPOINT
+        DB_ENDPOINT=$DB_ENDPOINT";Port=5432;Database=PostgresTestDb;User Id=postgres;Password=12453265"
+        echo $DB_ENDPOINT
         
-    #- name: run kub commands
-    #  working-directory: kub
-    #  run: |
-    #    aws eks update-kubeconfig --name my-eks-cluster --region us-east-1
-    #    kubectl create secret generic my-secret --from-literal=var2-key="$DB_ENDPOINT"
-    #    kubectl apply -f deployment.yaml
-    #    kubectl apply -f service.yaml 
+    - name: run kub commands
+      working-directory: kub
+      run: |
+        aws eks update-kubeconfig --name my-eks-cluster --region us-east-1
+        kubectl create secret generic my-secret --from-literal=var2-key="$DB_ENDPOINT"
+        kubectl apply -f deployment.yaml
+        kubectl apply -f service.yaml 
         
-    #- name: run wait for lb dns var
-    #  working-directory: kub
-    #  run: |  
-    #    while [ -z "$LB_DNS" ]; do
-    #     LB_DNS=`kubectl get service my-service --namespace default -o jsonpath="{.status.loadBalancer.ingress[0].hostname}"`
-    #     sleep 1
-    #    done
-    #    echo "Done"
+    - name: run wait for lb dns var
+      working-directory: kub
+      run: |  
+        while [ -z "$LB_DNS" ]; do
+         LB_DNS=`kubectl get service my-service --namespace default -o jsonpath="{.status.loadBalancer.ingress[0].hostname}"`
+         sleep 1
+        done
+        echo "Done"
         
-    #- name: run terraform initialization
-    #  working-directory: terraform1
-    #  run: terraform init
+    - name: run terraform initialization
+      working-directory: terraform1
+      run: terraform init
       
-    #- name: run terraform initialization
-    #  working-directory: terraform1
-    #  run: terraform apply -var="lb_dns_name=$LB_DNS" -auto-approve 
+    - name: run terraform initialization
+      working-directory: terraform1
+      run: terraform apply -var="lb_dns_name=$LB_DNS" -auto-approve 
       
           
         
