--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -29,36 +29,32 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v2
       
-    #- name: create ssl files on terraform location
-    #  working-directory: terraform
-    #  run: |  
-    #    echo "${{ secrets.CERT }}" > cert.pem
-    #    echo "${{ secrets.CHAIN }}" > chain.pem
-    #    echo "${{ secrets.PRIVKEY }}" > privkey.pem
-    #    echo "${{ secrets.CERT1 }}" > cert1.pem
-    #    echo "${{ secrets.CHAIN1 }}" > chain1.pem
-    #    echo "${{ secrets.PRIVKEY1 }}" > privkey1.pem
-    #    ls -la
+    - name: create ssl files on terraform location
+      working-directory: terraform
+      run: |  
+        echo "${{ secrets.CERT }}" > cert.pem
+        echo "${{ secrets.CHAIN }}" > chain.pem
+        echo "${{ secrets.PRIVKEY }}" > privkey.pem
+        echo "${{ secrets.CERT1 }}" > cert1.pem
+        echo "${{ secrets.CHAIN1 }}" > chain1.pem
+        echo "${{ secrets.PRIVKEY1 }}" > privkey1.pem
+        ls -la
       
-    #- name: run terraform initialization
-    #  working-directory: terraform
-    #  run: terraform init
+    - name: run terraform initialization
+      working-directory: terraform
+      run: terraform init
       
-    #- name: run terraform initialization
-    #  working-directory: terraform
-    #  run: terraform apply -auto-approve
+    - name: run terraform initialization
+      working-directory: terraform
+      run: terraform apply -auto-approve
       
-    #- name: run add db endpoint env var
-    #  working-directory: terraform
-    #  run: |
-    #    DB_ENDPOINT=$(aws rds describe-db-instances --query 'DBInstances[?DBInstanceIdentifier==`postgrestestdb`].[Endpoint.Address]' --output text)
-    #    DB_ENDPOINT="Server="$DB_ENDPOINT
-    #    DB_ENDPOINT=$DB_ENDPOINT";Port=5432;Database=PostgresTestDb;User Id=postgres;Password=12453265"
-    #    echo $DB_ENDPOINT
-        
-    - name: run kub commands
-      working-directory: kub
+    - name: run add db endpoint env var
+      working-directory: terraform
       run: |
+        DB_ENDPOINT=$(aws rds describe-db-instances --query 'DBInstances[?DBInstanceIdentifier==`postgrestestdb`].[Endpoint.Address]' --output text)
+        DB_ENDPOINT="Server="$DB_ENDPOINT
+        DB_ENDPOINT=$DB_ENDPOINT";Port=5432;Database=PostgresTestDb;User Id=postgres;Password=12453265"
+        echo $DB_ENDPOINT
         aws eks update-kubeconfig --name my-eks-cluster --region us-east-1
         kubectl create secret generic my-secret --from-literal=var2-key="$DB_ENDPOINT"
         kubectl apply -f deployment.yaml
@@ -71,14 +67,4 @@ jobs:
         cd ../terraform1
         terraform init
         terraform apply -var="lb_dns_name=$LB_DNS" -auto-approve 
-        
-    #- name: run terraform initialization
-    #  working-directory: terraform1
-    #  run: terraform init
-      
-    #- name: run terraform initialization
-    #  working-directory: terraform1
-    #  run: terraform apply -var="lb_dns_name=$LB_DNS" -auto-approve 
-      
-          
-        
+    
