Replaced meaningless namings with logical ones

--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -38,7 +38,6 @@ jobs:
         echo "${{ secrets.CERT1 }}" > cert1.pem
         echo "${{ secrets.CHAIN1 }}" > chain1.pem
         echo "${{ secrets.PRIVKEY1 }}" > privkey1.pem
-        ls -la
       
     - name: run terraform initialization
       working-directory: terraform
@@ -56,11 +55,11 @@ jobs:
         DB_ENDPOINT=$DB_ENDPOINT";Port=5432;Database=PostgresTestDb;User Id=postgres;Password=12453265"
         echo $DB_ENDPOINT
         aws eks update-kubeconfig --name my-eks-cluster --region us-east-1
-        kubectl create secret generic my-secret --from-literal=var2-key="$DB_ENDPOINT"
+        kubectl create secret generic connection_string --from-literal=var2-key="$DB_ENDPOINT"
         kubectl apply -f deployment.yaml
         kubectl apply -f service.yaml 
         while [ -z "$LB_DNS" ]; do
-         LB_DNS=`kubectl get service my-service --namespace default -o jsonpath="{.status.loadBalancer.ingress[0].hostname}"`
+         LB_DNS=`kubectl get service lb_connection_service --namespace default -o jsonpath="{.status.loadBalancer.ingress[0].hostname}"`
          sleep 1
         done
         echo $LB_DNS
