--- a/kub/service.yaml
+++ b/kub/service.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: my-service
+  name: lb_connection_service
   annotations:
     service.beta.kubernetes.io/aws-load-balancer-additional-resource-tags: "key1=eks,key2=eks_lb"  
 spec:
@@ -11,6 +11,4 @@ spec:
       targetPort: 80
       protocol: TCP
   selector:
-    app: my-app
-
-    
+    app: backend_app
